# Catzilla

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  todo
.cursor/rules/: build_and_test.json
benchmark/: CMakeLists.txt  benchmark_utils.cu  benchmark_utils.h  runner.cu
catz/: CMakeLists.txt  coord.h  coord_legacy.h  coord_nightly.h  cuda_utils.h  index.h  index_utils.h  macro.h  macros.h  matrix.h  matrix_legacy.h  matrix_utils.h  micro_kernels.h  trait.h  ukernels.h
catz/micro_kernels/: cuda_kernels.h  mma_kernels.h  raw_kernels.h  wmma_api_kernels.h  wmma_kernels.h  wmma_ptx_kernels.h
catz/ukernels/: cuda_kernels.h  mma_kernels.h  wmma_api_kernels.h  wmma_kernels.h
convolution/: CMakeLists.txt  implgemm_NHWC.h
convolution/include/: storage_print.h
convolution/mm_utils/: memcpy_pipeline.h
convolution/tests/unit_tests/: CMakeLists.txt  storage_convert_test.cpp
developer-notes/: future-plan.md  how-to-use-mma-instructions.md
recipes/: CMakeLists.txt  kernel_impls.h  main.cu  runner.cu  runner.h
recipes/kernels/: matmul.h  matmul_flatten_copy.h  matmul_vload_vstore.h  matmul_wmma_base.h
recipes/matmul/: matmul_choreo_gend.h  matmul_dist_to_thread.h  matmul_outerproduct.h  matmul_padswizzled.h  matmul_refactored.h  matmul_tensor_cores.h  matmul_tensor_cores_tuned.h  matmul_vanilla.h  matmul_vload_vstore.h  sgemm_for_choreo.h
recipes/sgemm/: CMakeLists.txt  kernels_importer.h  main.cu  runner.cu  sgemm_impls.h
recipes/sgemm/kernels/: sgemm_v1.h  sgemm_v2.h
recipes/sgemm/utils/: index_utils.h
recipes/utils/: index_utils.h  macros.h  micro_kernels.h
references/: CMakeLists.txt
references/convolution/: CMakeLists.txt  implgemm_NCHW.h  main.cu
references/convolution/include/: storage_create.h  storage_structure.h  storage_transfer.h
references/convolution/mm_utils/: data_structure_helper.h  mma_helper.h
references/convolution/tests/unit_tests/: verify_test.cu
references/sgemm/: CMakeLists.txt  runner.cu
references/sgemm/kernels/: 11_sgemm_manual.cuh  12_sgemm_manual.cuh  1_naive.cuh  3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  5_kernel_2D_blocktiling.cuh  6_kernel_vectorize.cuh
sgemm/: CMakeLists.txt  kernels.cuh  runner.cu  sgemm_main.cu
sgemm/kernels/: 10_kernel_hardcoded.cuh  2_kernel_global_mem_coalesce.cuh  5_kernel_2D_blocktiling.cuh  9_kernel_doublebuffer.cuh
sgemm/neosgemm/: 1_kernel.cuh
tests/: CMakeLists.txt
tests/recipetests/: CMakeLists.txt
tests/recipetests/matmul/: matmul_test.cu
tests/test_utils/: CMakeLists.txt  matmul_utils.h
tests/unittests/: CMakeLists.txt  coord_test.cu  dataflow_test.cu  dyn_and_const_test.cu  index_test.cu  matrix_test.cu  smoke_test.cpp  trait_test.cu
tools/: bench-all-kernels.sh
version-1/: CMakeLists.txt  Makefile  README.md  bench.log.A6000  gen_benchmark_results.sh  matrixValidationFailure.txt
version-1/src/: runner.cu
version-3/vulkan/benchmark/: smem_bandwidth.comp
version-5/: .gitignore  Makefile  gemm.cu  main.cpp
version-6/: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
version-6/scripts/: build.sh  build_sputnik.sh  run_baselines.sh
version-6/src/: CMakeLists.txt
version-6/src/SpConv/: CMakeLists.txt  implgemm_TC.h  main.cu  main_back.cu
version-6/src/SpConv/include/: storage.h  storage_convert.h  utils.h  verify.h
version-6/src/SpConv/mm_utils/: copy_helper.h
version-6/src/baselines/: CMakeLists.txt
version-6/src/baselines/cudnn/: CMakeLists.txt  main.cu
version-6/src/baselines/cudnn_frontend/: CMakeLists.txt  main.cu
version-6/src/baselines/cudnn_frontend/utils/: helpers.h
version-6/src/baselines/cutlass/: CMakeLists.txt  main_float.cu  main_half.cu
version-6/src/baselines/pytorch/: main.py
version-6/src/baselines/sputnik/: CMakeLists.txt  main.cu
